Unit structure is called "outline"

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "peerb-convertor",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "Convert legacy PB units",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Jan Martinek",
   "license": "ISC",
+  "repository": "https://github.com/jan-martinek/peerb-convertor",
   "bin": {
     "peerbc": "./index.js"
   },
